fix squished panel headers using flex-shrink

--- a/src/kibana/apps/dashboard/styles/main.less
+++ b/src/kibana/apps/dashboard/styles/main.less
@@ -66,8 +66,7 @@ dashboard-grid {
       .justify-content(flex-start);
 
       .panel-heading {
-        .flex();
-        min-height: 38px;
+        .flex(0 0 auto);
         white-space: nowrap;
         display: flex;
 
